cloudformation-04-rtb-routes.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "myVPC": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "EnableDnsSupport": "false",
        "EnableDnsHostnames": "false",
        "Tags": [{
          "Key": "Name",
          "Value": "cf-myVPC"
        }]
      }
    },
    "myPublicSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "myVPC"
        },
        "CidrBlock": "10.0.0.0/24",
        "AvailabilityZone": "eu-central-1a",
        "MapPublicIpOnLaunch": true,
        "Tags": [{
          "Key": "Name",
          "Value": "cf-public-subnet"
        }]
      }
    },
    "myPrivateSubnet": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "VpcId": {
          "Ref": "myVPC"
        },
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": "eu-central-1b",
        "Tags": [{
          "Key": "Name",
          "Value": "cf-private-subnet"
        }]
      }
    },
    "myInternetGateway": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [{
          "Key": "Name",
          "Value": "cf-igw"
        }]
      }
    },
    "AttachIgwGateway": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "myVPC"
        },
        "InternetGatewayId": {
          "Ref": "myInternetGateway"
        }
      }
    },
    "natGwEip": {
      "DependsOn": "myVPC",
      "Type": "AWS::EC2::EIP",
      "Properties": {
        "Domain": "vpc"
      }
    },
    "myNatGateway": {
      "Type": "AWS::EC2::NatGateway",
      "DependsOn": "AttachIgwGateway",
      "Properties": {
        "AllocationId": {
          "Fn::GetAtt": ["natGwEip", "AllocationId"]
        },
        "SubnetId": {
          "Ref": "myPublicSubnet"
        }
      }
    },
    "myRtbForPublicZone": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "myVPC"
        },
        "Tags": [{
          "Key": "Name",
          "Value": "cf-rtb-public"
        }]
      }
    },
    "routeToIgw": {
      "Type": "AWS::EC2::Route",
      "DependsOn": "AttachIgwGateway",
      "Properties": {
        "RouteTableId": {
          "Ref": "myRtbForPublicZone"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "GatewayId": {
          "Ref": "myInternetGateway"
        }
      }
    },
    "myPublicSubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "myPublicSubnet"
        },
        "RouteTableId": {
          "Ref": "myRtbForPublicZone"
        }
      }
    },
    "myRtbForPrivateZone": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "myVPC"
        },
        "Tags": [{
          "Key": "Name",
          "Value": "cf-rtb-private"
        }]
      }
    },
    "routeToNatGw": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "RouteTableId": {
          "Ref": "myRtbForPrivateZone"
        },
        "DestinationCidrBlock": "0.0.0.0/0",
        "NatGatewayId": {
          "Ref": "myNatGateway"
        }
      }
    },
    "myPrivateSubnetRouteTableAssociation": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "SubnetId": {
          "Ref": "myPrivateSubnet"
        },
        "RouteTableId": {
          "Ref": "myRtbForPrivateZone"
        }
      }
    }
  }
}
